# IFSC_PROGOO_PROJECT

./: README.md  analise.md  implementacao.md  projeto.md  testes.md
code/: CMakeLists.txt
code/resources/: style.qss
code/src/: main.cpp
code/src/engine/: BinaryOperation.cpp  BinaryOperation.h  CalculatorEngine.cpp  CalculatorEngine.h  Memory.cpp  Memory.h  Operation.cpp  Operation.h  UnaryOperation.cpp  UnaryOperation.h
code/src/ui/: CalcDisplay.cpp  CalcDisplay.h  CalculatorButton.cpp  CalculatorButton.h  MainWindow.cpp  MainWindow.h  ScientificPanel.cpp  ScientificPanel.h  StandardPanel.cpp  StandardPanel.h
code/tests/: CMakeLists.txt  TestEngine.cpp
docs/: classes.puml  classes_engine.puml  classes_ui.puml  domain.puml  sequence.puml  usecase.puml
